--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
         <script src="./resources/ol.js"></script>
         <script src="./resources/ol-layerswitcher.js"></script>
         <script src="resources/ol-geocoder.js"></script>
-        <script src="layers/Rice_5.js"></script><script src="layers/Wheatbelowthreshold1075kTons_7.js"></script><script src="layers/Wheat_8.js"></script><script src="layers/IndiaBoundary_9.js"></script><script src="layers/Buffer50Km_10.js"></script><script src="layers/PaperMills_11.js"></script><script src="layers/PaperMillsWheatTOP20_12.js"></script>
-        <script src="styles/Rice_5_style.js"></script><script src="styles/Wheatbelowthreshold1075kTons_7_style.js"></script><script src="styles/Wheat_8_style.js"></script><script src="styles/IndiaBoundary_9_style.js"></script><script src="styles/Buffer50Km_10_style.js"></script><script src="styles/PaperMills_11_style.js"></script><script src="styles/PaperMillsWheatTOP20_12_style.js"></script>
+        <script src="layers/Wheatbelowthreshold1075kTons_3.js"></script><script src="layers/Wheat_4.js"></script><script src="layers/IndiaBoundary_5.js"></script><script src="layers/Buffer50Km_6.js"></script><script src="layers/PaperMills_7.js"></script><script src="layers/PaperMillsWheatTOP20_8.js"></script>
+        <script src="styles/Wheatbelowthreshold1075kTons_3_style.js"></script><script src="styles/Wheat_4_style.js"></script><script src="styles/IndiaBoundary_5_style.js"></script><script src="styles/Buffer50Km_6_style.js"></script><script src="styles/PaperMills_7_style.js"></script><script src="styles/PaperMillsWheatTOP20_8_style.js"></script>
         <script src="./layers/layers.js" type="text/javascript"></script> 
         <script src="./resources/Autolinker.min.js"></script>
         <script src="./resources/qgis2web.js"></script>
